--- a/htdocs/resources/site.css
+++ b/htdocs/resources/site.css
@@ -1,3 +1,8 @@
+h2{
+	margin: 10px 0px 4px;
+	padding: 0px;
+}
+
 
 code {
 	white-space: pre;
@@ -67,3 +72,55 @@ code.block {
 	max-height: 40px;
 	max-width: 150px;
 }
+
+
+.org_logo{
+	float:right;
+	border: 1px solid #193965;
+	padding: 3px;
+
+	font-weight: bold;
+	color:#193965;
+}
+
+.opd_note{
+	background: rgba(44,103,170,0.3) ;
+	padding: 3px;
+	border: 1px solid #193965;
+	margin: 0px auto 15px;
+	width: 95%;
+	text-align:center;
+}
+
+img {
+	max-width: 95%;
+}
+
+.org_info th {
+	font-weight: bold;
+	color:#193965;
+}
+
+.org_info td,
+.org_info th{
+	padding: 3px;
+}
+
+.rv_mapbox {
+	border: 1px solid #193965;
+	border-radius: 2px;
+}
+
+.rv_mapbox nav{
+	padding: 4px;
+}
+
+.rv_mapbox nav a {
+	cursor: pointer;
+}
+
+.rv_mapbox .loc {
+	padding: 4px;
+	float:right;
+}
+
