--- a/htdocs/resources/site.css
+++ b/htdocs/resources/site.css
@@ -1,4 +1,5 @@
 h1{
+	margin-top:10px;
 	clear:both;
 }
 
@@ -6,6 +7,13 @@ h2{
 	margin: 10px 0px 4px;
 	padding: 0px;
 }
+
+h5{
+	margin: 10px 0px 4px;
+	padding: 0px;
+}
+
+
 
 
 code {
@@ -132,4 +140,33 @@ img {
 	padding: 4px;
 	float:right;
 }
+.bordered_table{
+	width: 100%;
+	border: 1px solid #193965;
+}
 
+.bordered_table th,
+.bordered_table td{
+	border: 1px solid #193965;
+	padding: 5px;
+}
+.bordered_table td{
+	cursor: pointer;
+}
+.bordered_table .center {
+	text-align: center;
+}
+
+.bordered_table th {
+	font-weight: bold;
+}
+
+.bordered_table tr.hover:hover{
+	background: #eee;
+	
+}
+
+.download_as {
+	text-align:right;
+	padding: 8px 3px;
+}
